css/styles.css
/* ... */
.lw-img {
  flex: 1;
  width: auto; 
  height: auto;
  /* margin-left: 25px; */
  /* max-height: 15em; */
  filter: drop-shadow(-2px -2px 6px rgba(0,0,0,0.4)) drop-shadow(2px 2px 6px rgba(255,255,255,0.7));
  transition: all 0.5s;
  opacity: 0.8;
}

.section::after {
  content: "";
  background-color: #c0c0c0;
  width: 100%;
  height: 4px;
  display: block;
  box-shadow: -1px 2px 4px rgba(0,0,0,0.4), 1px -2px 4px rgba(255,255,255,0.7);
  margin: 2em 0px;
}

.section p, .section ul {
  color: #444;
}

#hidden-content p,#hidden-content ul {
  color: whitesmoke;
}

#hidden-content a.button {
  background-color: rgba(0,0,0,0);
  color: white;
  font-family: 'Staatliches', cursive;
  font-size: 1.3em;
  text-decoration: none;
  padding: 5px 10px;
  border-style: solid;
  border-color: white;
  margin: 0.8em;
  box-shadow: 2px 2px 5px 1px rgba(0,0,0,0.3);
  border-radius: 25px;
  width: 70%;
  text-align: center;
  align-self: center;
  cursor: pointer;
  transition: background-color 0.5s, color 0.5s;
  transition-timing-function: ease-in-out;
}

span.btn-details {
  border: 2px solid gray;
  border-radius: 7px;
  padding: 1px 5px;
  font-weight: bold;
  margin-right: 0.2em;
  margin-left: 0.2em;
  color: gray;
}

#cardwrapper {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: center;
}

#cardwrapper > i {
  width: 300px;
  margin: 1em;
}

.card {
  display: flex;
  position: relative;
  flex-direction: column;
  justify-content: flex-start;
  width: 300px;
  height: 420px;
  box-shadow: -1px 2px 4px rgba(0,0,0,0.4), 1px -2px 4px rgba(255,255,255,0.7);
  border-radius: 20px;
  /* border: solid 1px #b0b0b0; */
  margin: 2em 1em;
  filter: saturate(0.5);
  transition: all 0.5s ease-in-out 0s;
}

.card.hidden {
  display: none;
}

.card-header {
  border-radius: 10px;
  margin: 0.5em 0.5em 0.1em 0.5em;
  padding: 0.5em;
  box-shadow: inset -5px 5px 6px #a7a7a7,
  inset 5px -5px 6px #d9d9d9;
  transition: all 0.5s ease-in-out 0s;
}

.card-header > img {
  opacity: 100%;
  width: 100%;
  border-radius: 5px;
  transition: all 0.5s ease-in-out 0s;
}

.card-content {
  display: flex;
  flex-direction: column;
  border-radius: 20px;
  padding: 0.25em 0.75em;
}

#card-tech {
  display: flex;
  justify-content: flex-start;
  align-items: center;
  padding: 0.25em 0.75em;
}

#card-tech object {
  height: 20px;
  margin: 0 0.5rem;
  filter: contrast(30%);
}

#card-tag-wrapper {
  display: flex;
  justify-content: space-between;
  align-items: center;
  /* align-self: end; */
  margin-bottom: 0.2em;
}

#card-tag-wrapper > div {
  display: flex;
}

#card-tag-wrapper > p {
  color: #5D5E60;
  font-size: 1rem;
  font-weight: bold;
  margin: 0;
}

#card-tag {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 75px;
  height: 30px;
  box-shadow: inset -5px 5px 6px #a7a7a7, inset 5px -5px 6px #d9d9d9;
  border-radius: 10px;
  background-color: #c0c0c0;
  color: darkcyan;
  font-size: 8px;
  font-weight: bold;
  text-align: center;
  text-transform: uppercase;
  align-self: end;
  margin: 0.5em;
}

#card-headline {
  color: black !important;
  font-weight: bold;
  font-size: 16px;
  margin: 0;
}

#card-info {
  font-size: 16px;
  color: black !important;
  margin: 0;
}

#card-btn {
  display: flex;
  justify-content: center;
  align-items: center;
  align-self: center;
  position: absolute;
  bottom: -40px;
  cursor: pointer;
  text-transform: uppercase;
  background-color: #c0c0c0;
  width: 70px;
  padding: 18px 20px;
  margin: 0.5em .2em;
  text-align: center;
  border-radius: 10px;
  box-shadow: -1px 2px 5px rgba(0,0,0,0.4), 1px -2px 5px rgba(255,255,255,0.7);
  transition: all .2s ease-in-out;
}

.card-btn-wrapper #card-btn:nth-child(1) {
  left: 30px;
}

.card-btn-wrapper #card-btn:nth-child(2) {
  right: 30px;
}

#card-btn > a, #card-btn > a:visited {
  width: 100%;
  color: grey;
  font-size: 16px;
  font-weight: bold;
  display: inline-block;     
  position: relative;    
  z-index: 1;     
  padding: 18px 32px;   
  margin: -18px -32px;
  transition: all .2s ease-in-out;
}

#card-btn:active {
  box-shadow: inset -2px 2px 5px #a7a7a7,
  inset 2px -2px 5px #d9d9d9;
}

details[open] > div {
  animation-name: slideDown;
  animation-duration: 0.6s;
  animation-fill-mode: forwards;
}

details[open] > div > .filter-btn {
  opacity: 0;
  animation-name: showContent;
  animation-duration: 0.6s;
  animation-delay: 0.2s;
  animation-fill-mode: forwards;
}

summary {
  display: flex;
  cursor: pointer;
  color: #c0c0c0;
  font-weight: bold;
  font-family: sans-serif;
  text-transform: uppercase;
  font-size: 1.5em;
  text-shadow: -0.025em 0.025em 0.056em rgba(0,0,0,0.4), 0.025em -0.025em 0.056em rgba(255,255,255,0.7);
  transition: all 0.5s ease-in-out 0s;
  transition: .3s;
  user-select: none;
  margin: 0.5em;
}

.filter-indicator {
  display: flex;
  justify-content: center;
  align-items: center;
  align-self: center;
  height: 25px;
  width: 25px;
  text-align: center;
  transform-origin: center;
  transition: all .3s ease-in-out;
  transition: transform 0.3s;
}

.filter-indicator.minus {
  display: none;
}

.filter-indicator.plus {
  display: flex;
}

/* >> summary:hover is on bottom */

details[open] .filter-indicator.minus {
  display: flex;
}

details[open] .filter-indicator.plus {
  display: none;
}


@keyframes slideDown {
  from {
    opacity: 0;
    height: 0;
    padding: 0;
  }

  to {
    opacity: 1;
    height: var(--contentHeight);
    padding: 20px;
  }
}

@keyframes showContent {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}

.filter-btn-wrapper {
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
  margin: 0.7em;
}
/* ... */

